# programming

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  functions.cpp  functions.hpp  hash.cpp  hash.hpp  image.cpp  image.hpp  ip.cpp  lab_2.cpp  lab_2_a.cpp  lab_3.cpp  main.cpp  matrix.cpp  matrix.hpp  members.txt  store.cpp  store.hpp  task_1.cpp  task_2.cpp  task_3.cpp  update_tag.py  update_tag.sh
.github/workflows/: release.yml
assert_testing/: CMakeLists.txt  main.cpp  mop.cpp  mop.hpp
ctest_testing/: CMakeLists.txt  CMakePresets.json  main.cpp  walk.hpp
ctest_testing/tests/: CMakeLists.txt  test_from_start.cpp  test_incorrect.cpp  test_random_dots.cpp
div_without_div/: div.hpp  division_without_division.cpp  function.cpp
gtest_testing/: CMakeLists.txt  main.cpp  tasks.hpp
gtest_testing/gtests/: CMakeLists.txt  tests.cpp
include/: Box.hpp  DoubleList.hpp  List.hpp  ip.hpp
multifiles/: functions.hpp  lab_2.cpp
src/: ip.cpp  main.cpp
tests/: blank.cpp  box_test.cpp  double_list_test.cpp  file_test.cpp  file_testing.cpp  ip_test.cpp  list_test.cpp
try-catch/: bundle.hpp  functions_stack.cpp  try-catch.cpp
